--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,173 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+body {
+  margin: 0;
+}
+h1 {
+  text-align: center;
+  font-size: 72px;
+  margin: 24px 0px 0px 0px;
+  color: #000;
+  font-family: Lato;
+  font-size: 72px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+h2 {
+  color: #000;
+  text-align: center;
+  font-family: Lato;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+ol, li {
+  padding-left: 15px;
+  color: #155EEF;
+  font-family: Lato;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+}
+button {
+  color: #CEA201;
+  background-color: rgba(255, 255, 255, 0);
+  border: 2px solid #CEA201;
+  color: #CEA201;
+  font-family: Lato;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 32px;
+  padding: 12px 32px;
+  display: inline-block;
+  margin: 32px 0px 0px 55px;
+}
+{
+  color: #00D4BC;
+  font-family: Lato;
+  font-size: 24px;
+  line-height: 32px;
+  text-align: right;
+  display: block;
+}
+
+/* || ID Selectors */
+
+#special_one {
+  margin-top: 16px;
+}
+
+/* || Class Selector */
+
+.first_statement_heading {
+  margin-top: 12px;
+  margin-bottom: 0;
+}
+.first_statement {
+  width: 568px;
+}
+.painting {
+  width: 568px;
+}
+.painting_container {
+  width: 568px;
+  height: 446px;
+  overflow-y: hidden;
+  background-image: url(./images/painting.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.first_statement_text {
+  color: #414651;
+  text-align: center;
+  font-family: Lato;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  margin-top: 16px;
+}
+.first_statement_mother {
+  margin-top: 37px;
+}
+.second_statement {
+  margin-top: 74px;
+  margin-left: 55px;
+  width: 722px;
+  box-sizing: border-box;
+}
+.first_section_p {
+  color: #414651;
+  text-align: center;
+  font-family: Lato;
+  font-size: 20px;
+}
+.second_section_p {
+  color: #00C76E;
+  text-align: center;
+  font-family: Lato;
+  font-size: 20px;
+}
+.first_lis {
+  color: #FF5DA3;
+  font-family: Lato;
+  font-size: 16px;
+}
+.center_ol {
+  width: 461px;
+  margin: auto;
+}
+.butterfly_img {
+  width: 200px;
+  height: 200px;
+  margin-top: 24px;
+}
+.third_section_article {
+  padding: 16px;
+  border: 6px solid #C11574;
+  background: #FFDEF0;
+  margin-top: 24px;
+}
+.jellyfish_img {
+  height: 396px;
+  margin-top: 24px;
+}
+.article_options {
+  display: inline;
+  color: #C27512;
+  font-family: Lato;
+  font-size: 16px;
+  margin-left: 12px;
+}
+.article_heading {
+  color: #414651;
+  font-family: Lato;
+  font-size: 24px;
+  font-weight: 800;
+  line-height: 24px;
+  margin: 0;
+}
+
+/* || Reusable CSS Classes*/
+
+.article_divs {
+  margin-top: 8px;
+}
+.dots {
+  display: inline-block;
+  width: 16px;
+  height: 16px;
+  background-color: #000;
+  border-radius: 50%;
+}
+.padding {
+  padding: 20px;
+}
+.margin_left {
+  margin-left: 55px;
+}
